docs(*): improve docs

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ pre span { visibility: hidden; }
   <body>
     <header>
       <h1>domscii</h1>
-      <p>DOM to ASCII &bull; <a href="https://github.com/dbkaplun/domscii">Fork on Github</a></p>
+      <p>Convert arbitrary DOM elements to ASCII &bull; <a href="https://github.com/dbkaplun/domscii">docs, code, &#9733; on Github</a></p>
     </header>
 
     <hr>
