fix(demo): imagesLoaded

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ textarea { background: #00a; border: 1px solid #55f; outline: none; }
     <script type="riot/tag" src="riot/domscii.tag"></script>
     <script type="riot/tag" src="riot/domscii-demo.tag"></script>
     <script src="https://cdn.jsdelivr.net/g/riot@2.2(riot.min.js+compiler.min.js)"></script>
-
+    <script src="https://cdn.jsdelivr.net/imagesloaded/3.1.8/imagesloaded.pkgd.min.js"></script>
     <script>
 riot.mount('*');
     </script>
